Minor adjustments and refinements to the example apps and the authentication workflow.

--- a/src/thub/static_assets/success.html
+++ b/src/thub/static_assets/success.html
@@ -14,5 +14,9 @@
     <p>
       This token is also stored in your session cookie for browser access.
     </p>
+    <div class="button-container">
+      <a href="{next}" class="button button-primary">Continue</a>
+      <a href="/logout" class="button button-secondary">Logout</a>
+    </div>
   </body>
 </html>
