--- a/src/thub/static_assets/skeleton_index_offline.html
+++ b/src/thub/static_assets/skeleton_index_offline.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>{project_name}</title>
-    <link rel="stylesheet" href="https://pyscript.net/releases/{version}/core.css">
-    <script type="module" src="https://pyscript.net/releases/{version}/core.js"></script>
+    <link rel="stylesheet" href="./pyscript/core.css">
+    <script type="module" src="./pyscript/core.js" offline></script>
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
